--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,58 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Ionic Blank
+      Meteo à {{ city }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content class="ion-padding">
+  <ion-grid *ngIf="meteo">
+    <ion-row>
+      <ion-col size="6" offset="3" class="ion-text-center">
+        <h2>{{ city }}</h2>
+        <div>
+          <img
+            [src]="meteo.current_condition.icon_big"
+            alt="{{ city }}">
+        </div>
+        <h3>Description</h3>
+        <h4>{{ meteo.current_condition.tmp }} &deg;C</h4>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-list>
+          <ion-item>
+            <ion-label>
+              <h2><strong>Pression</strong>: 1005</h2>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              <h2><strong>Humidité: </strong> 52 %</h2>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              <h2><strong>Lever du soleil: </strong> 08:03</h2>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              <h2><strong>Coucher du soleil: </strong> 18:03</h2>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              <h2><strong>Coordonnées: </strong> {{ meteo.city_info.latitude }}, {{ meteo.city_info.longitude }}</h2>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
