Tabs page content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,18 +15,5 @@
     </ion-content>
   </ion-menu>
 
-  <ion-router-outlet main>
-    <ion-tabs>
-      <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="home">
-          <ion-label>Home</ion-label>
-          <ion-icon name="home"></ion-icon>
-        </ion-tab-button>
-        <ion-tab-button tab="settings">
-          <ion-label>Settings</ion-label>
-          <ion-icon name="settings"></ion-icon>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
-  </ion-router-outlet>
+  <ion-router-outlet main></ion-router-outlet>
 </ion-app>
