--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,22 +28,22 @@
         <ion-list>
           <ion-item>
             <ion-label>
-              <h2><strong>Pression</strong>: 1005</h2>
+              <h2><strong>Pression</strong>: {{ meteo.current_condition.pressure}}</h2>
             </ion-label>
           </ion-item>
           <ion-item>
             <ion-label>
-              <h2><strong>Humidité: </strong> 52 %</h2>
+              <h2><strong>Humidité: </strong> {{ meteo.current_condition.humidity }} %</h2>
             </ion-label>
           </ion-item>
           <ion-item>
             <ion-label>
-              <h2><strong>Lever du soleil: </strong> 08:03</h2>
+              <h2><strong>Lever du soleil: </strong> {{ meteo.city_info.sunrise }}</h2>
             </ion-label>
           </ion-item>
           <ion-item>
             <ion-label>
-              <h2><strong>Coucher du soleil: </strong> 18:03</h2>
+              <h2><strong>Coucher du soleil: </strong> {{ meteo.city_info.sunset }}</h2>
             </ion-label>
           </ion-item>
           <ion-item>
